--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="photo">
+            <img src="img/ava.jpg" alt="Efimsohn's avatar" width="100%">
+        </div>
+
+        <div class="name">
+            <h1>
+                Efimenko Alexei 
+            </h1>
+            <h2>
+                Software Engineer
+            </h2>
+        </div>
+    </header>
 </body>
 </html>
