feat: add footer

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <header>
-        <div class="photo">
+        <div class="left">
             <img src="img/ava.jpg" alt="Efimsohn's avatar" width="100%">
         </div>
 
-        <div class="name">
+        <div class="right">
             <h1>
                 Efimenko Alexei 
             </h1>
@@ -20,5 +20,9 @@
             </h2>
         </div>
     </header>
+
+    <footer>
+        All rights reserved
+    </footer>
 </body>
 </html>
