feat: remove width from img

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="left">
-            <img src="img/ava.jpg" alt="Efimsohn's avatar" width="100%">
+            <img class="ava" src="img/ava.jpg" alt="Efimsohn's avatar">
         </div>
 
         <div class="right">
@@ -44,8 +44,8 @@
             </h1>
             <ul>
                 <li>Email: kumyo5500@gmail.com</li>
-                <li>GitHub: AVEfimsohn</li>
-                <li>Telegram: @EOStridsvagn</li>
+                <li>GitHub: <a href="https://github.com/AVEfimsohn">AVEfimsohn</a></li>
+                <li>Telegram: <a href="t.me/EOStridswagn">@EOStridsvagn</a></li>
             </ul>
         </div>
 
@@ -66,9 +66,9 @@
                 Code Example:
             </h1>
             <p>
-    Python code from my lab work that encrypts text in certain file by adding 5 to symbol code:
-</p>
-<pre class="code"><code>input_filename = input("Enter input filename: ")
+                Python code from my lab work that encrypts text in certain file by adding 5 to symbol code:
+            </p>
+            <pre class="code"><code>input_filename = input("Enter input filename: ")
 output_filename = input("Enter output filename: ")
 
 with open(input_filename, 'rb') as input_file:
