--- a/index.html
+++ b/index.html
@@ -23,48 +23,57 @@
 
     <main>
         <div class="left">
-            <h1>
+            <h2>
                 Skills:
-            </h1>
+            </h2>
             <ul>
                 <li>Python(TKinter, Matplotlib)</li>
                 <li>C++(C++17, Qt framework)</li>
                 <li>TurboAssembler(simple stuff under DosBox)</li>
             </ul>
-            <h1>
+            <h2>
                 Languages:
-            </h1>
+            </h2>
             <ul>
-                <li>English</li>
-                <li>Russian</li>
-                <li>Belarusian</li>
+                <li>English(Intermediate)</li>
+                <li>Russian(Native)</li>
+                <li>Belarusian(Native)</li>
             </ul>
-            <h1>
+            <h2>
                 Contact Information:
-            </h1>
+            </h2>
             <ul>
                 <li>Email: kumyo5500@gmail.com</li>
                 <li>GitHub: <a href="https://github.com/AVEfimsohn">AVEfimsohn</a></li>
-                <li>Telegram: <a href="t.me/EOStridswagn">@EOStridsvagn</a></li>
+                <li>Telegram: <a href="https://t.me//EOStridswagn">@EOStridsvagn</a></li>
+                <li>Discord: <a href="https://discord.com/users/@jornojovanno.">@jornojovanno.</a></li>
+            </ul>
+            <h2>
+                List of completed projects:
+            </h2>
+            <ul>
+                <li><a href="https://github.com/AVEfimsohn/Belarusian_Latin_Keyboard">Belarusian Latin Keyboard</a></li>
+                <li><a href="https://github.com/AVEfimsohn/Student_List">Student List</a></li>
+                <li><a href="https://github.com/AVEfimsohn/Flags_written_in_Turbo_Assembler">Flags writen in TurboAssembler</a></li>
             </ul>
         </div>
 
         <div class="right">
-            <h1>
+            <h2>
                 About Me:
-            </h1>
+            </h2>
             <p>
                 Hi, I'm a second year student of BNTU, Faculty of Information Technology and Robotics. Over the past year, I've got accuaited with basics of algorithmisation, computer architecture, math and learned basics of different programming languages like Python, C++ and TurboAssembler. Beyond university, I’m passionate about expanding my skills by taking specialized courses on Stepik and leetcoding.
             </p>
-            <h1>
+            <h2>
                 Education:
-            </h1>
+            </h2>
             <p>
                 Hi, I'm a second year student of BNTU, Faculty of Information Technology and Robotics. Over the past year, I've got accuaited with basics of algorithmisation, computer architecture, math and learned basics of different programming languages like Python, C++ and TurboAssembler. Beyond university, I’m passionate about expanding my skills by taking specialized courses on Stepik and leetcoding.
             </p>
-            <h1>
+            <h2>
                 Code Example:
-            </h1>
+            </h2>
             <p>
                 Python code from my lab work that encrypts text in certain file by adding 5 to symbol code:
             </p>
@@ -84,7 +93,11 @@ print(f"File '{input_filename}' has been encoded and saved as '{output_filename}
     </main>
 
     <footer>
-        All rights reserved
+        <nav>
+            <a class="git" href="https://github.com/AVEfimsohn"></a>
+            | 2025 |
+            <a class="rs" href="https://rs.school/courses/javascript-ru"></a>
+        </nav>
     </footer>
 </body>
 </html>
